helpers-mbim: report correct network availability from mbim bitmask

MbimProviderState is a bitset, so don't try to match exact values in a
switch statement when converting to MMModem3gppNetworkAvailability.

Fixes https://gitlab.freedesktop.org/mobile-broadband/ModemManager/-/issues/524

(cherry picked from commit a32538fa3287aaedc2ecf7baa269ad1c4f3485a0)